test/expected/declare_xvi-c.out
declare x as consteval int
             ^
14: error: "consteval": unsupported keyword in C; did you mean "constexpr"?
